# py-great-resume

./: .gitignore  LICENSE  README.md  pyproject.toml  resume.json  setup.cfg
.github/workflows/: build.yml  lint.yml
data/: example-resume.json
src/py_great_resume/: __init__.py  __main__.py  filters.py  resume.py
src/py_great_resume/templates/: long.html
src/py_jsonresume/: __init__.py  __main__.py  filters.py  jsonresume.py
src/py_jsonresume/templates/: long.html
tests/: test_filters.py
