[metadata]
name = py_great_resume
description = Make a great resume, using Python.
maintainer = Burton DeWilde
maintainer_email = burtdewilde@gmail.com
license = MIT
license_files =
    LICENSE
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 2 - Pre-Alpha
    Programming Language :: Python
    Programming Language :: Python :: 3
keywords =
    resume
    templater
    renderer
url = https://github.com/bdewilde/py-great-resume

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    jinja2>=2.11.0
    jsonschema>=3.0.0
    weasyprint>=52

[options.packages.find]
where = src

[options.extras_require]
dev =
    black>=19.0b0,<20.8b0
    flake8>=3.8.0
    mypy>=0.600
    pytest>=6.0.0
    pytest-cov>=2.6.0
    twine>=3.0.0
    wheel>=0.33.5

[flake8]
exclude = .git,.github,__pycache__,build,dist,docs,tests
ignore = E203,W503
max-line-length = 88
statistics = True
per-file-ignores =
    src/**/__init__.py:F401
