[metadata]
name = py_great_resume
description = Make a great resume, using Python.
maintainer = Burton DeWilde
maintainer_email = burtdewilde@gmail.com
license = MIT
license_files =
    LICENSE
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 3 - Alpha
    Programming Language :: Python
    Programming Language :: Python :: 3
keywords =
    resume
    templater
    renderer
url = https://github.com/bdewilde/py-great-resume

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9
install_requires =
    jinja2~=3.0
    jsonschema~=4.0
    MarkupSafe  # required by jinja2
    weasyprint>=54.0

[options.packages.find]
where = src

[options.extras_require]
dev =
    black
    build
    flake8
    isort
    mypy>=0.900
    pytest~=7.0
    pytest-cov
    twine
    wheel

[flake8]
exclude = .git,.github,__pycache__,build,dist,docs,tests
ignore = E203,W503
max-line-length = 88
statistics = True
per-file-ignores =
    src/**/__init__.py:F401
